--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -17,15 +17,13 @@
 <!-- Services Cards Section -->
 <div class="cards-section container mb-4">
     <div class="row">
-        
         <div class="col-lg-6 col-md-6 mb-4">
-            <div class="card shadow">
-                <div class="row no-gutters">
-                    <div class="col-md-6" >
+            <div class="card shadow h-100">
+                <div class="row g-0 flex-column flex-md-row">
+                    <div class="col-12 col-md-6">
                         <img src="{% static 'image/head.jpg' %}" class="card-img" alt="Commercial Solar">
-                        
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-12 col-md-6 d-flex align-items-center">
                         <div class="card-body">
                             <h5 class="card-title">Commercial Solar</h5>
                             <p class="card-text">Cost-effective energy solutions for businesses and industrial applications.</p>
@@ -35,17 +33,18 @@
                 </div>
             </div>
         </div>
+
         <div class="col-lg-6 col-md-6 mb-4">
-            <div class="card shadow">
-                <div class="row no-gutters">
-                    <div class="col-md-6">
+            <div class="card shadow h-100">
+                <div class="row g-0 flex-column flex-md-row">
+                    <div class="col-12 col-md-6">
                         <img src="{% static 'image/head.jpg' %}" class="card-img" alt="Battery Storage">
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-12 col-md-6 d-flex align-items-center">
                         <div class="card-body">
                             <h5 class="card-title">Battery Storage</h5>
                             <p class="card-text">Store excess energy and ensure power supply during outages.</p>
-                            <a href="#" class="btn btn-info btn-sm mt-2 mx-auto d-block w-75 ">View More</a>
+                            <a href="#" class="btn btn-info btn-sm mt-2 mx-auto d-block w-75">View More</a>
                         </div>
                     </div>
                 </div>
@@ -53,6 +52,7 @@
         </div>
     </div>
 </div>
+
 
 <!-- About Section -->
 <section id="about" class="about-section py-5" style="background-color: #586659;">
