--- a/static/css/service.css
+++ b/static/css/service.css
@@ -17,6 +17,7 @@
 
 .hero {
     background-color: var(--primary-color);
+    background: linear-gradient(rgba(88, 102, 89, 0.3), rgba(0, 0, 0, 0.5)), url('../image/head.jpg') no-repeat center center/cover;
     color: var(--white);
     padding: 5rem 0;
     text-align: center;
@@ -204,6 +205,12 @@
 
     .step:nth-child(2):after {
         display: none;
+    }
+    .hero h1 {
+        font-size: 2rem;
+    }
+    .hero p {
+        font-size: 1rem;
     }
 }
 
