--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -55,7 +55,7 @@
 
 
 <!-- About Section -->
-<section id="about" class="about-section py-5" style="background-color: #586659;">
+<section id="about" class="about-section py-5">
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-6 mb-4 mb-lg-0">
