--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -7,7 +7,7 @@
     <div class="container">
         <h1>Powering a Sustainable Future</h1>
         
-        <a href="#about" class="btn">Get in Touch</a>
+        <a href="https://wa.me/918157033676" class="btn">Get in Touch</a>
     </div>
 </section>
 
@@ -26,7 +26,7 @@
             <a href="#" class="btn">Learn Our Story</a>
         </div>
         <div class="mission-image">
-            <img src="{% static 'image/head.jpg' %}" alt="Solar panels installation">
+            <img src="https://th-thumbnailer.cdn-si-edu.com/xFhp84SLZXp25HENNNvER3XSiRY=/1280x960/filters:focal(400x267:401x268)/https://tf-cmsv2-smithsonianmag-media.s3.amazonaws.com/filer/97/0e/970ef3d3-b05b-420a-96b4-5356ae4e07a9/solar_roof.jpg" alt="Solar panels installation">
         </div>
     </div>
 </section>
@@ -131,7 +131,7 @@
         <h2>Ready to Make the Switch to Solar?</h2>
         <p>Join thousands of satisfied customers who are saving money while saving the planet. Our experts are ready to
             design a custom solar solution for your home or business.</p>
-        <a href="{% url 'contact' %}" class="btn">Get a Free Consultation</a>
+        <a href="tel:918157033676" class="btn">Contact Us</a>
     </div>
 </section>
 
