--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -20,38 +20,37 @@
 
         <div class="info-item">
             <div class="info-icon">
-                <i>📍</i>
+                <i class="fas fa-map-marker-alt"></i>
             </div>
             <div class="info-text">
                 <h3>Our Location</h3>
-                <p>123 Gallery Street, Art District</p>
-                <p>New York, NY 10001</p>
+                <p>Decent junction, Kollam</p>
             </div>
         </div>
 
         <div class="info-item">
             <div class="info-icon">
-                <i>📞</i>
+                <i class="fas fa-phone-alt"></i>
             </div>
             <div class="info-text">
                 <h3>Phone Number</h3>
-                <p><a href="tel:+12125551234">(212) 555-1234</a></p>
+                <p><a href="tel:+918157033676">8157033676</a></p>
             </div>
         </div>
 
         <div class="info-item">
             <div class="info-icon">
-                <i>✉️</i>
+                <i class="fas fa-envelope"></i>
             </div>
             <div class="info-text">
                 <h3>Email Address</h3>
-                <p><a href="mailto:info@artgallery.com">info@artgallery.com</a></p>
+                <p><a href="mailto:Multimix2015kollam@gmail.com">Multimix2015kollam@gmail.com</a></p>
             </div>
         </div>
 
         <div class="info-item">
             <div class="info-icon">
-                <i>⏰</i>
+                <i class="fas fa-clock"></i>
             </div>
             <div class="info-text">
                 <h3>Working Hours</h3>
@@ -63,16 +62,16 @@
 
         <div class="social-links">
             <a href="#" class="social-icon">
-                <i>f</i>
+                <i class="fab fa-facebook-f"></i>
             </a>
             <a href="#" class="social-icon">
-                <i>t</i>
+                <i class="fab fa-twitter"></i>
             </a>
             <a href="#" class="social-icon">
-                <i>in</i>
+                <i class="fab fa-linkedin-in"></i>
             </a>
             <a href="#" class="social-icon">
-                <i>ig</i>
+                <i class="fab fa-instagram"></i>
             </a>
         </div>
     </div>
@@ -105,6 +104,7 @@
         </form>
     </div>
 </div>
+
 
 <!-- Map Section -->
 <div class="container-fluid">
