--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -6,7 +6,7 @@
 <section class="hero">
     <div class="container">
         <h1>Powering a Sustainable Future</h1>
-        
+
         <a href="https://wa.me/918157033676" class="btn">Get in Touch</a>
     </div>
 </section>
@@ -16,17 +16,15 @@
     <div class="container mission-content">
         <div class="mission-text" id="about">
             <h2>Our Mission</h2>
-            <p>Founded in 2010, SolarPeak Energy has been at the forefront of the renewable energy revolution, driven by
-                our passion to create a cleaner, greener future for generations to come.</p>
-            <p>Our mission is simple: to accelerate the global transition to sustainable energy through cutting-edge
-                solar technology that is accessible, efficient, and cost-effective for homes and businesses alike.</p>
-            <p>With over 10,000 installations across the country and numerous industry awards, we pride ourselves on
-                quality craftsmanship, exceptional customer service, and innovative solutions tailored to each client's
-                unique needs.</p>
-            <a href="#" class="btn">Learn Our Story</a>
+            <p style="text-align: justify;">The founder and Managing Director of Multimix Distributors, established in 2016 to make clean energy
+                accessible and affordable. With a passion for renewable energy and experience, I have led the company to
+                achieve industry recognition. as a trusted MNRE vendor and a member of the Masters Association MULTIMIX
+                Distributors is a leader in renewable energy, delivering solutions for commercial
+                and residential clients-Recognized by the Ministry of New and Renewable Energy (MNRE)</p>
         </div>
         <div class="mission-image">
-            <img src="https://th-thumbnailer.cdn-si-edu.com/xFhp84SLZXp25HENNNvER3XSiRY=/1280x960/filters:focal(400x267:401x268)/https://tf-cmsv2-smithsonianmag-media.s3.amazonaws.com/filer/97/0e/970ef3d3-b05b-420a-96b4-5356ae4e07a9/solar_roof.jpg" alt="Solar panels installation">
+            <img src="https://th-thumbnailer.cdn-si-edu.com/xFhp84SLZXp25HENNNvER3XSiRY=/1280x960/filters:focal(400x267:401x268)/https://tf-cmsv2-smithsonianmag-media.s3.amazonaws.com/filer/97/0e/970ef3d3-b05b-420a-96b4-5356ae4e07a9/solar_roof.jpg"
+                alt="Solar panels installation">
         </div>
     </div>
 </section>
