--- a/static/css/about.css
+++ b/static/css/about.css
@@ -132,7 +132,8 @@ body {
 
 .team-member img {
     width: 100%;
-    height: auto;
+    height: 180px;
+    object-fit: cover;
 }
 
 .member-info {
