--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -35,7 +35,7 @@
         <h2>Meet Our Leadership Team</h2>
         <div class="team-grid">
             <div class="team-member">
-                <img src="{% static 'image/head.jpg' %}" alt="CEO">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQIf4R5qPKHPNMyAqV-FjS_OTBB8pfUV29Phg&s" alt="CEO">
                 <div class="member-info">
                     <h3>Sarah Johnson</h3>
                     <p>Chief Executive Officer</p>
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div class="team-member">
-                <img src="{% static 'image/head.jpg' %}" alt="CTO">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQIf4R5qPKHPNMyAqV-FjS_OTBB8pfUV29Phg&s" alt="CTO">
                 <div class="member-info">
                     <h3>Michael Chen</h3>
                     <p>Chief Technology Officer</p>
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div class="team-member">
-                <img src="{% static 'image/head.jpg' %}" alt="COO">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQIf4R5qPKHPNMyAqV-FjS_OTBB8pfUV29Phg&s" alt="COO">
                 <div class="member-info">
                     <h3>Daniel Rodriguez</h3>
                     <p>Chief Operations Officer</p>
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="team-member">
-                <img src="{% static 'image/head.jpg' %}" alt="CSO">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQIf4R5qPKHPNMyAqV-FjS_OTBB8pfUV29Phg&s" alt="CSO">
                 <div class="member-info">
                     <h3>Emma Williams</h3>
                     <p>Chief Sustainability Officer</p>
